--- a/pkg-config/lua-sandbox.pc.in
+++ b/pkg-config/lua-sandbox.pc.in
@@ -3,10 +3,10 @@ exec_prefix=${prefix}
 libdir=${exec_prefix}/lib@LIB_SUFFIX@
 includedir=${prefix}/include
 
-Name: Monkey
-Description: The Monkey library.
+Name: Lua Sandbox
+Description: Lua Sandboxing library.
 URL: @PACKAGE_URL@
 Version: @PACKAGE_VERSION_MAJOR@.@PACKAGE_VERSION_MINOR@.@PACKAGE_VERSION_MICRO@
 # Requires:
-Libs: -L${libdir} -lluasb
+Libs: -L${libdir} -lluasb -ldl
 Cflags: -I${includedir}
